# cs-cloudflare-worker-bouncer

./: .dockerignore  .gitignore  .golangci.yml  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  main.go
.github/: dependabot.yml
.github/workflows/: build-binary-package.yml  lint.yml  publish-docker-doc.yml  release-drafter.yml  release_publish_docker-image.yml  tests.yml  tests_deb.yml  tests_unit.yml  update-js.yml
Docker/: README.MD
cmd/: root.go  root_test.go
config/: crowdsec-cloudflare-worker-bouncer.service  crowdsec-cloudflare-worker-bouncer.yaml  crowdsec-cloudflare-worker-bouncer_docker.yaml
debian/: changelog  control  postinst  postrm  prerm  rules
docker/: README.MD
pkg/cf/: cf.go
pkg/cf/worker/: webpack.config.js
pkg/cfg/: config.go  config_test.go  logging.go
pkg/cloudflare/: cloudflare.go  cloudflare_test.go  metrics.sql
pkg/cloudflare/decisions-sync-worker/: package-lock.json  package.json  webpack.config.cjs
pkg/cloudflare/decisions-sync-worker/src/: index.js  types.d.ts
pkg/cloudflare/decisions-sync-worker/src/adapters/: cloudflare-kv.js
pkg/cloudflare/decisions-sync-worker/src/core/: decision-fetcher.js  decision-processor.js
pkg/cloudflare/decisions-sync-worker/src/utils/: logger.js
pkg/cloudflare/worker/: package-lock.json  package.json  worker.js
pkg/metrics/: metrics.go
rpm/SPECS/: crowdsec-cloudflare-bouncer.spec  crowdsec-cloudflare-worker-bouncer.spec
scripts/: _bouncer.sh  install.sh
test/: pyproject.toml
